--- a/trunk/osp_plugins/plugin_template_files/index.htm
+++ b/trunk/osp_plugins/plugin_template_files/index.htm
@@ -9,19 +9,17 @@
 <h1>The Guide to Creating USIP OSP Plugins.</h1>
 <p>This guide will walk you (a developer) through the process of creating a plugin for the USIP OSP. this will allow you to provide people with additional functionality in their simulations.</p>
 <h2>The Process at a Glance</h2>
-<ul>
-  <li>Step 1. Copy Files<br />
-  The first thing you will do will be to copy all of the template files into a directory you create for your plugin files.</li>
-  <li>Create the XML definition file (for example grid_doc_v0_0_0.xml)</li>
-  <li>Install your section on a development environment. (Admin --&gt; Extension Tasks --&gt; Install Simulation Sections)</li>
+<ol>
+  <li><strong>Copy Files.</strong> The first thing you will do will be to copy all of the template files into a directory you create for your plugin files.</li>
+  <li><strong>Create the XML definition file.</strong> (for example grid_doc_v0_0_0.xml)</li>
+  <li><strong>Install.</strong> First install your section on a development environment. (This is done by signing on as an admin and moving to the install section: Admin --&gt; Extension Tasks --&gt; Install Simulation Sections)</li>
   <li>navigate to where you will add the plugin section</li>
   <li>review and fix if necessary the page creation page</li>
   <li>Add the section to the sample player (maybe we should discuss how to create minimal sim with minimal player)</li>
   <li>create running sim and login as player who has the new plugin section</li>
   <li>review and fix, if necessary, the new plugin section</li>
-</ul>
+</ol>
 <h2>The Process in Detail</h2>
-<p>&nbsp;</p>
 <p>You will need to edit '<a href="template_index.jsp">template_index.jsp</a>' and save it as 'index.jsp' This will become the main documentation starter page for your plugin.</p>
 <p>You will need to ...</p>
 <p>&nbsp; </p>
